package entidades;

import entidades.jugadores.Jugador;

public interface Interactuable {
    void interactuar(Jugador jugador);

}
