package entidades.constructores;

import entidades.Interactuable;

public interface ConstructorInteractuable {
    Interactuable construir(String tipo);
}
